# IdovenExercise2

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
qaa/: bot.py  constants.py  init_driver.py
qaa/page_object/: locator.py  page.py
test_reports/: debugbear.html
tests/: conftest.py  test_demo.py
