[tool.poetry]
name = "idoven-exercise2"
version = "0.1.0"
description = ""
authors = ["Martin S"]
readme = "README.md"
packages = [{include = "qaa"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.12.0"
webdriver-manager = "^4.0.0"
pytest = "^7.4.2"
pytest-html = "^4.0.1"
pylint = "^2.17.5"
pytest-xdist = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
